--- a/style.css
+++ b/style.css
@@ -33,5 +33,15 @@ body{
     margin-left: 50px;
 }
 .card:hover{
-    background-color: #7fffd4;
+ background-color: grey;
+    color: crimson;
 }
+
+.card img{
+    height: 75px;
+    width: 75px;
+    align-self: center;
+    margin-top: 35px;
+    margin-bottom: 30px;
+}
+.mid-section2{}
