--- a/style.css
+++ b/style.css
@@ -28,13 +28,14 @@ body{
 .mid-section{
     text-align: center;
     padding-top: 100px;
+    height: 500px;
 }
 .card-container{
     margin-left: 50px;
 }
 .card:hover{
  background-color: grey;
-    color: crimson;
+    color: white;
 }
 
 .card img{
@@ -47,4 +48,20 @@ body{
 footer a{
     text-decoration: none;
 }
-
+.banner h1{
+    text-align: center;
+    padding-top: 250px;
+    color: white;
+    font-weight: bolder;
+    font-size: 55px;
+}
+.banner{
+    background-color: rgba(00, 00, 00, 0.7);
+}
+.banner::before{
+ content: "";
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ background-color: rgba(00, 00, 00, 0.8);   
+}
