--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body{
     padding: 25px;
     border-radius: 10%;
     color: black;
+    border: darkblue 5px solid;
 }
 .mid-section{
     text-align: center;
@@ -44,9 +45,13 @@ body{
 .leaveMessage{
     width: 100%;
     color: #000000;
+    background-color: slategrey;
+    background-image: url(Assets/img/ship02.jpg);
+    background-size: 100% 100%;
+    width: 100%;
 }
 .btn1{
-    border: none;
+    border: none;  
     outline: none;
     height: 50px;
     width: 100%;
@@ -94,3 +99,28 @@ footer a{
     color: navy;
     margin-bottom: 25px;
 }
+.form-group {
+    margin-bottom: 1rem;
+  }
+  
+  .form-inline .form-control {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+  
+  .form-row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -5px;
+    margin-left: -5px;
+  }
+  
+  .form-row > .col {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  
+  label {
+    margin-bottom: 0.5rem;
+  }
