--- a/style.css
+++ b/style.css
@@ -29,17 +29,23 @@ body{
     border-radius: 10%;
     color: black;
     border: darkblue 5px solid;
+    box-shadow: 10px 10px 10px;
 }
 .mid-section{
     text-align: center;
     padding-top: 100px;
-    height: 500px;
+    width: 100%;
+    display: block;
+    height: 700px;
+}
+.mid-section h1{
+    color: blue;
 }
 .cardboarder-container{
     margin-left: 50px;
 }
 .cardboarder:hover{
- background-color: grey; 
+ background-color: pink; 
     color: white;
 }
 .leaveMessage{
@@ -49,6 +55,7 @@ body{
     background-image: url(Assets/img/ship02.jpg);
     background-size: 100% 100%;
     width: 100%;
+    display: block;
 }
 .btn1{
     border: none;  
@@ -60,9 +67,7 @@ body{
     border-radius: 4px;
     font-weight: bolder;
 }
-footer{
-    display: none;
-}
+
 .btn1:hover{
     background-color: white;
     color: black;
@@ -80,7 +85,7 @@ footer a{
 }
 .banner h1{
     text-align: center;
-    padding-top: 250px;
+    padding-top: 350px;
     color: white;
     font-weight: bolder;
     font-size: 55px;
@@ -92,7 +97,7 @@ footer a{
  content: "";
  position: absolute;
  width: 100%;
- height: 100%;
+ height: 90%;
  background-color: rgba(00, 00, 00, 0.8);   
 }
 .sub-title{
