--- a/style.css
+++ b/style.css
@@ -301,7 +301,6 @@ label {
         flex: 1;
       }
       .banner1 h1 {
-        margin-top: 100px;
         margin-left: 50px;
         padding-top: 150px;
         font-size: 40px;
@@ -315,28 +314,38 @@ label {
       }
       .banner1 button{
         opacity: 0.9;
+        display: none;
       }
       .banner2{
-        height: 250px;
+        height: 400px;
+      }
+      .banner2 h1{
+        padding-top: 175px;
+        text-align: center;
       }
       .banner2::before{
-        height: 250px;
+        height: 400px;
       }
       .banner3{
-        height: 250px;
+        height: 400px;
+      }
+      .banner3 h1{
+        padding-top: 175px;
+        text-align: center;
       }
       .banner3::before{
-        height: 250px;
+        height: 400px;
       }
       .banner4{
-        height: 250px;
-      }
-      .banner4::before{
-        height: 250px;
+        height: 400px;
       }
       .banner4 h1{
-        margin-top: 0px;
+        padding-top: 175px;
+        text-align: center;
       }
+      .banner4::before{
+        height: 400px;
+      } 
        .left,
         .flew-row {
           width: 100%;
@@ -372,5 +381,9 @@ label {
           height: 50px;
           width: 50px;
           margin: 0px;
+        }
+        .cardboarder:hover{
+          background-color: grey;
+          color: #ffffff;
         }
        }
